api,.htaccess,index.php added for backend,(audio optional)

--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,11 @@
 **/.history/
 
 # Ignore PHP and HTML files
-*.php
+#*.php
 
 # Ignore audio files
 *.mp3
 *.wav
-
-# Ignore API files
-/api/*
-
-# Ignore specific files
-/index.php
-/.htaccess
 
 # Ignore audio folder for upload
 /audio
